solving alignment bugs

--- a/src/LandingPage/9.QuickLinks/Ql.scss
+++ b/src/LandingPage/9.QuickLinks/Ql.scss
@@ -119,6 +119,10 @@
       flex-direction: column;
       gap: 14px;
       font-family : Genos;
+      justify-content : center;
+      align-items : center;
+      
+      button{flex : 1 1 0}
     }
 
     .linkBtn {
@@ -143,23 +147,27 @@
 @include mediaDevice(mobile){
 
   #QlMC{
-
+    display : grid;
+    place-items : center;
+    padding : 10px;
     .links{
       width: 100%;
       display: grid;
       grid-template-columns: 1fr 1fr;
-      justify-items: center;
-      align-items: start;
+      place-items : center;
       padding: 0;
     }
 
     .socials{
       grid-column: span 2;
+      padding : 0;
     }
 
     .QLeles{
       min-width: 0;
-      width: fit-content;
+      display : grid;
+      place-items : center;
+      padding : 0;
     }
 
   }
